Template getting going. Character Cards, HP & LVL calls from JS, Menu & Dialogue taking shape.

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,13 +1,74 @@
-button{
-  display: block;
-  margin-bottom: 10px;
-  background-color:aquamarine;
-  color:brown;
-  padding: 10px;
-  border-radius: 10px;
-  margin-left: 40%;
+body{
+  background-color: #333;
+  display: flex;
+  justify-content: space-around;
 }
 
 #app{
+  width: 950px;
+  display: inline-block;
+  background-color: #fff;
+  box-shadow: 0 0 60px black;
+  margin-top: 80px;
+  margin-bottom: 80px;
+}
+
+.characterCard{
+  padding: 5px;
+  border: 5px solid #c36;
+  display: inline-block;
+  width: 350px;
   text-align: center;
+  margin: 15px;
+  background-color: #ccc;
+  border-radius: 20px;
+  
+  .stats{
+    display: flex;
+    justify-content: space-around;
+  }
+}
+
+#bottom{
+  border: 5px solid orange;
+  display: inline-block;
+  width: 940px;
+  background-color: #285068;
+  bottom: 0;
+  
+  #dialogue{
+    display: inline-block;
+    margin-top: 20px;
+    margin-left: 20px;
+    width: 500px;
+    color: #eee;
+  }
+
+  #menu{
+    bottom: 0;
+    margin-right: 0;
+    float: right;
+    padding: 10px;
+    background-color: #eee;
+    border: 5px solid #222;
+    border-radius-left-top: 10px;
+    width: 350px;
+    height: 100px;
+    color: black;
+  }
+}
+
+#menu li{
+  list-style: none;
+  width: 100px;
+  margin: 15px;
+  margin-top: 5px;
+  text-align: center;
+  font-weight: bold;
+  display: inline-block;
+  
+  &:hover{
+    text-shadow: 0 0 2px #444;
+    cursor: pointer;
+  }
 }
